      line number and column, used for opening source links and
      editing input fields with i_<C-i>. See :h 'editor'. [b4]
    * Mapping changes:
      - It's now possible to map keys in many more modes, including
        Hint, Multi-line Output, and Menu. [b4]
      - Added site-specific mapping groups and related command
        changes. [b6]
      - Added <A-m>l and <A-m>s to aid in the construction of
        macros. [b6]
      - Removed the implicit page load delays during macro playback. [b6]
      - Added the base modes Base, Main, and Command which other
        modes inherit key bindings from. [b6]
    * Command changes:
      - :viusage, :optionusage and :exusage were replaced with :listkeys,
        :listoptions and :listcommands, providing more powerful and
        consistent interactive help facility (improvements include
        listing keys for modes other than Normal, filtering the output
        and linking to source code locations). [b4]
      - :downloads now opens a download list in the multi-line output
        buffer.
      - Added :mapgroup command and -group flag to :map, :unmap, and
        :mapclear. [b6]
      - :extensions has been replaced with a more powerful :addons.
      - Added :cookies command. [b3]
      - :extadd now supports remote URLs as well as local files on Firefox 4. [b2]
      - Added :if/:elseif/:else/:endif conditionals. [b3]
      - Added -charset and -post to :bmark. [b5]
      - Added -keyword, -tags, -title to :delbmarks. [b2]
      - Added :extrehash, :exttoggle, :extupdate, and :rehash commands. [b5]
      - Added :feedkeys command. [b4]
      - Added -sort option to :history. [b4]
      - Added several new options, including -javascript, to :abbreviate and
        :map. [b2]
      - Added :mksyntax command to auto-generate Vim syntax files. [b4]
      - :open now only opens files beginning with /, ./, ../, or ~/ [b1]
      - :saveas now provides completions for default file names, and