@@ -62,6 +62,7 @@
         Hint, Multi-line Output, and Menu. [b4]
       - Added site-specific mapping groups and related command
         changes. [b6]
+      - Added 'timeout' and 'timeoutlen' options. [b6]
       - Added <A-m>l and <A-m>s to aid in the construction of
         macros. [b6]
       - Removed the implicit page load delays during macro playback. [b6]
